# copper

./: .gitignore  .pre-commit-config.yaml  LICENSE  PATCH_IMPLEMENTATION_SUMMARY.md  README.md  STAC_SECURITY_PATCHES.md  costing_api.stac.bash  database.db  datasets.db.bak  display.py  ex.json  loading.py  main.py  pyproject.toml  pytest.ini  sea_level_template.py  todo.md
.github/workflows/: test.yml
api/: cds.py  old_commands.py
api/stac/: __init__.py  client.py  commands.py  config.py  crud.py  database.py  exceptions.py  models.py  optimizer.py  utils.py
api/templates/: commands.py
browse/: commands.py  datasets.py  textual_search.py  utils.py
data/: future_tide_actual-value_2015_MSL_v1.parquet  future_tide_actual-value_2015_TR_v1.parquet  future_tide_actual-value_2016_MSL_v1.parquet  future_tide_actual-value_2016_TR_v1.parquet  future_tide_actual-value_2017_MSL_v1.parquet  future_tide_actual-value_2017_TR_v1.parquet  future_tide_actual-value_2018_MSL_v1.parquet  future_tide_actual-value_2018_TR_v1.parquet  future_tide_actual-value_2019_MSL_v1.parquet  future_tide_actual-value_2019_TR_v1.parquet  future_tide_actual-value_2020_MSL_v1.parquet  future_tide_actual-value_2020_TR_v1.parquet  future_tide_actual-value_2021_MSL_v1.parquet  future_tide_actual-value_2021_TR_v1.parquet  future_tide_actual-value_2022_MSL_v1.parquet  future_tide_actual-value_2022_TR_v1.parquet  future_tide_actual-value_2023_MSL_v1.parquet  future_tide_actual-value_2023_TR_v1.parquet  future_tide_actual-value_2024_MSL_v1.parquet  future_tide_actual-value_2024_TR_v1.parquet  future_tide_actual-value_2025_MSL_v1.parquet  future_tide_actual-value_2025_TR_v1.parquet  future_tide_actual-value_2026_MSL_v1.parquet  future_tide_actual-value_2026_TR_v1.parquet  future_tide_actual-value_2027_MSL_v1.parquet  future_tide_actual-value_2027_TR_v1.parquet  future_tide_actual-value_2028_MSL_v1.parquet  future_tide_actual-value_2028_TR_v1.parquet  future_tide_actual-value_2029_MSL_v1.parquet  future_tide_actual-value_2029_TR_v1.parquet  future_tide_actual-value_2030_MSL_v1.parquet  future_tide_actual-value_2030_TR_v1.parquet  future_tide_actual-value_2031_MSL_v1.parquet  future_tide_actual-value_2031_TR_v1.parquet  future_tide_actual-value_2032_MSL_v1.parquet  future_tide_actual-value_2032_TR_v1.parquet  future_tide_actual-value_2033_MSL_v1.parquet  future_tide_actual-value_2033_TR_v1.parquet  future_tide_actual-value_2034_MSL_v1.parquet  future_tide_actual-value_2034_TR_v1.parquet  (+162 more)
docs/: TESTING.md  badges.md
scripts/: setup-pre-commit.sh
specs/: costings-module.md  example.collection.json
storage/: datasets.py  models.py
storage/sql/: datasets.sql  fts_index.sql  stac.sql
tests/: conftest.py  example_template.json  example_valid_template.json  test_template.py  test_utils.py
tests/api/costings/: __init__.py  test_integration.py  test_models.py  test_utils.py
tests/api/stac/: test_integration.py
