[project]
name = "copper-cli"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cdsapi>=0.7.6",
    "typer>=0.9.0",
    "typing-extensions>=4.14.0",
    "xarray>=2025.6.1",
    "rich>=13.9.5",
    "rapidfuzz>=3.13.0",
    "textual[syntax]>=3.5.0",
    "duckdb>=1.3.1",
    "playwright>=1.53.0",
    "pydantic>=2.11.7",
    "netcdf4>=1.7.2",
    "fastparquet>=2024.11.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
    "aiosqlite>=0.21.0",
    "multimethod>=2.0",
    "polars>=1.32.3",
]

[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "pytest>=8.4.1",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.2",
    "pre-commit>=3.6.0",
]

[project.scripts]
cdsfetch="main:cli"
copper="main:cli"

[tool.coverage.run]
source = ["api"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
